--- a/PhotoUploadTool/PhotoUploadTool-Info.plist
+++ b/PhotoUploadTool/PhotoUploadTool-Info.plist
@@ -20,7 +20,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.comdosoft.liuyunApp</string>
+	<string>com.comdosoft.david.liuyunApp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
